# c2usb-zephyr-examples

./: .clang-format  .gitignore  CMakeLists.txt  Kconfig  README.md  projects.code-workspace  west.yml
.github/workflows/: build.yml
ble-keyboard/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
ble-keyboard/src/: main.cpp
lib/: CMakeLists.txt  Kconfig  demo_keyboard.hpp  iolib.cpp  iolib.h
patches/zephyr/: 0001-bluetooth-dis-allow-more-dynamic-serial-number-handl.patch  0001-drivers-udc-avoid-infinite-loop-when-closing-OUT-EPs.patch  0001-drivers-udc-nrf-disable-SOF-interrupts.patch  0001-west-sysbuild-allows-using-application-cmake-presets.patch
scripts/: west_vscode.py
usb-keyboard/: CMakeLists.txt  prj.conf  sample.yaml  west.yml
usb-keyboard/src/: main.cpp
usb-mouse/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
usb-mouse/src/: main.cpp
usb-shell/: CMakeLists.txt  prj.conf  sample.yaml
usb-shell/src/: main.cpp
zephyr/: module.yml
